update untuk bagian responsive

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto text-center">
-              <a class="nav-link" href="#">Home</a>
-              <a class="nav-link" href="#">About</a>
-              <a class="nav-link" href="#">Services</a>
-              <a class="nav-link" href="#">Portfolio</a>
-              <a class="nav-link contact-usr" href="#">Contact Us</a>
+              <a class="nav-link" href="#hero">Home</a>
+              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="#services">Services</a>
+              <a class="nav-link" href="#work">Portfolio</a>
+              <a class="nav-link contact-us" href="#contact-us">Contact Us</a>
             </div>
           </div>
         </div>
@@ -36,7 +36,7 @@
     <!-- ======= Hero======= -->
     <main>
       <section id="hero" class="container mt-5">
-        <div class="row">
+        <div class="row d-flex flex-column-reverse flex-lg-row">
           <div class="col-md mt-4 pt-5">
             <h1>We Create Content that ranks</h1>
             <a class="" href="">SEE OUR WORK</a>
@@ -63,110 +63,110 @@
       </section>
 
       <!-- ======= Services======= -->
-        <section id="services" class="valuable-services text-center">
-          <div class="mb-5">
-            <h2>Our Valuable Services</h2>
-            <span></span>
-          </div>
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-12">
-                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <div class="container">
-                        <div class="row">
-                          <div class="col-lg-4">
-                            <div class="card first">
-                              <div class="card-body">
-                                <img src="img/Bitmap1.png" class="d-block w-100" alt="...">
-                                <h6>App Development</h6>
-                                <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                <a href="#">READ MORE</a>
-                              </div>
+      <section id="services" class="valuable-services text-center">
+        <div class="mb-5">
+          <h2>Our Valuable Services</h2>
+          <span></span>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+              <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-lg-4">
+                          <div class="card first">
+                            <div class="card-body">
+                              <img src="img/Bitmap1.png" class="d-block w-100" alt="..." />
+                              <h6>App Development</h6>
+                              <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                              <a href="#">READ MORE</a>
                             </div>
                           </div>
-                          <div class="col-lg-4">
-                            <div class="card second">
-                              <div class="card-body">
-                                <img src="img/Bitmap2.png" class="d-block w-100" alt="...">
-                                <h6>Web Development</h6>
-                                <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                <a href="#">READ MORE</a>
-                              </div>
+                        </div>
+                        <div class="col-lg-4">
+                          <div class="card second">
+                            <div class="card-body">
+                              <img src="img/Bitmap2.png" class="d-block w-100" alt="..." />
+                              <h6>Web Development</h6>
+                              <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                              <a href="#">READ MORE</a>
                             </div>
                           </div>
-                          <div class="col-lg-4">
-                            <div class="card third">
-                              <div class="card-body">
-                                <img src="img/Bitmap3.png" class="d-block w-100" alt="...">
-                                <h6>UI UX Design</h6>
-                                <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                <a href="#">READ MORE</a>
-                              </div>
+                        </div>
+                        <div class="col-lg-4">
+                          <div class="card third">
+                            <div class="card-body">
+                              <img src="img/Bitmap3.png" class="d-block w-100" alt="..." />
+                              <h6>UI UX Design</h6>
+                              <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                              <a href="#">READ MORE</a>
                             </div>
                           </div>
-                        </div>  
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <div class="container">
-                        <div class="row">
-                          <div class="col-lg-4">
-                            <div class="card first">
-                              <div class="card-body">
-                                <img src="img/Bitmap1.png" class="d-block w-100" alt="...">
-                                <h6>App Development</h6>
-                                <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                <a href="#">READ MORE</a>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="col-lg-4">
-                            <div class="card second">
-                              <div class="card-body">
-                                <img src="img/Bitmap2.png" class="d-block w-100" alt="...">
-                                <h6>Web Development</h6>
-                                <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                <a href="#">READ MORE</a>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="col-lg-4">
-                            <div class="card third">
-                              <div class="card-body">
-                                <img src="img/Bitmap3.png" class="d-block w-100" alt="...">
-                                <h6>UI UX Design</h6>
-                                <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                <a href="#">READ MORE</a>
-                              </div>
-                            </div>
-                          </div>
-                        </div>  
+                        </div>
                       </div>
                     </div>
                   </div>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                    <div class="next">
-                      <i class="carousel-control-next-icon" aria-hidden="true"></i>
-                      <i class="visually-hidden">Next</i>
+                  <div class="carousel-item">
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-lg-4">
+                          <div class="card first">
+                            <div class="card-body">
+                              <img src="img/Bitmap1.png" class="d-block w-100" alt="..." />
+                              <h6>App Development</h6>
+                              <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                              <a href="#">READ MORE</a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-lg-4">
+                          <div class="card second">
+                            <div class="card-body">
+                              <img src="img/Bitmap2.png" class="d-block w-100" alt="..." />
+                              <h6>Web Development</h6>
+                              <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                              <a href="#">READ MORE</a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-lg-4">
+                          <div class="card third">
+                            <div class="card-body">
+                              <img src="img/Bitmap3.png" class="d-block w-100" alt="..." />
+                              <h6>UI UX Design</h6>
+                              <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                              <a href="#">READ MORE</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                  </button>
+                  </div>
                 </div>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <div class="next">
+                    <i class="carousel-control-next-icon" aria-hidden="true"></i>
+                    <i class="visually-hidden">Next</i>
+                  </div>
+                </button>
               </div>
             </div>
           </div>
-        </section>
+        </div>
+      </section>
 
-        <!-- ======= Work ======= -->
-        <section id="work" class="work text-center">
-          <div class="container">
-            <h2 class="text-white">Our Work</h2>
+      <!-- ======= Work ======= -->
+      <section id="work" class="work text-center">
+        <div class="container">
+          <h2 class="text-white">Our Work</h2>
           <span></span>
           <div class="row row-cols-1 text-white mt-5">
             <div class="col row my-4">
-              <div class="col-lg"><img src="img/Bitmap.png" alt="" class="img-fluid" /></div>
-              <div class="col-lg text-start">
+              <div class="col-lg"><img src="img/Bitmap.png" alt="" class="img-fluid mb-5 mb-lg-0" /></div>
+              <div class="col-lg text-lg-start text-center">
                 <h4>Brand Name</h4>
                 <p class="custom">iOS | ANDROID | WEB DEVELOPMENT</p>
                 <p>
@@ -175,8 +175,8 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg row my-4">
-              <div class="col-lg text-end">
+            <div class="col-lg row my-4 d-flex flex-column-reverse flex-lg-row">
+              <div class="col-lg text-lg-end text-center">
                 <h4>Brand Name</h4>
                 <p class="custom">iOS | ANDROID | WEB DEVELOPMENT</p>
                 <p>
@@ -184,11 +184,11 @@
                   consequat.
                 </p>
               </div>
-              <div class="col-lg"><img src="img/Bitmap Copy.png" alt="" class="img-fluid" /></div>
+              <div class="col-lg"><img src="img/Bitmap Copy.png" alt="" class="img-fluid mb-5 mb-lg-0" /></div>
             </div>
             <div class="col row my-4">
-              <div class="col-lg"><img src="img/Bitmap Copy 2.png" alt="" class="img-fluid" /></div>
-              <div class="col-lg text-start">
+              <div class="col-lg"><img src="img/Bitmap Copy 2.png" alt="" class="img-fluid mb-5 mb-lg-0" /></div>
+              <div class="col-lg text-lg-start text-center">
                 <h4>Brand Name</h4>
                 <p class="custom">iOS | ANDROID | WEB DEVELOPMENT</p>
                 <p>
@@ -197,8 +197,8 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg row my-4">
-              <div class="col-lg text-end">
+            <div class="col-lg row my-4 d-flex flex-column-reverse flex-lg-row">
+              <div class="col-lg text-lg-end text-center">
                 <h4>Brand Name</h4>
                 <p class="custom">iOS | ANDROID | WEB DEVELOPMENT</p>
                 <p>
@@ -206,22 +206,22 @@
                   consequat.
                 </p>
               </div>
-              <div class="col-lg"><img src="img/Bitmap Copy 3.png" alt="" class="img-fluid" /></div>
+              <div class="col-lg"><img src="img/Bitmap Copy 3.png" alt="" class="img-fluid mb-5 mb-lg-0" /></div>
             </div>
           </div>
           <a class="my-4 mb-5" href="">SEE ALL WORK</a>
-          </div>
-        </section>
+        </div>
+      </section>
 
       <!-- ======= Contact Us======= -->
-      <section class="contact-us">
+      <section id="contact-us" class="contact-us">
         <div class="container my-5 py-5">
-          <div class="container-fluid row">
-            <div class="col-md">
+          <div class="container-fluid row row-cols-lg-2 row-cols-1">
+            <div class="col mb-5 mb-lg-0">
               <h2 class="text-1">Questions, Comments, Concerns?</h2>
               <h1 class="text-2">We’d love to <span class="custom">hear</span> from you!</h1>
             </div>
-            <div class="col-md">
+            <div class="col">
               <form action="https://formspree.io/f/xzbwlrgv" method="POST">
                 <label for="email" class="d-block">Your Email Address</label>
                 <input type="email" placeholder="something@website.com" name="email" class="custom ps-3" /><br />
