--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Final Project 3</title>
+    <link href="img/favicon/apple-icon-60x60.png" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
@@ -15,11 +16,11 @@
     <header>
       <nav class="navbar navbar-expand-lg fixed-top bg-white shadow-sm py-0">
         <div class="container my-3">
-          <div class="navbar-brand">
+          <div id="navbar-brand">
             <a class="brand" href="#"><img class="d-flex" src="img/Combined Shape.png" alt="duck" /></a>
           </div>
 
-          <div class="nav-brand">
+          <div id="nav-brand">
             <a class="n-brand" href="#"><img class="d-flex" src="img/Combined Shape.png" alt="duck" /></a>
           </div>
           <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
